corrección del nombre de la interface IPersonaMoral

--- a/.gitignore
+++ b/.gitignore
@@ -121,3 +121,6 @@ tests/CIF.Sample/bin/Debug/HtmlAgilityPack.pdb
 tests/CIF.Sample/bin/Debug/HtmlAgilityPack.xml
 tests/CIF.Sample/bin/Debug/itextsharp.xml
 tests/CIF.Sample/bin/Debug/Jaeger.SAT.CIF.pdb
+src/obj/Debug/TemporaryGeneratedFile_036C0B5B-1481-4323-8D20-8F5ADCB23D92.cs
+src/obj/Debug/TemporaryGeneratedFile_5937a670-0e60-4077-877b-f7221da3dda1.cs
+src/obj/Debug/TemporaryGeneratedFile_E7A71F73-0F8D-4B9B-B56E-8E70B10BC5D3.cs
